--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,12 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
-<p>What's for dinner tonight?<p>
+
+<form class="ingredient" id="ingredient" action="/" accept-charset="UTF-8" method="post">
+
+<p>
+    <input placeholder="Ingredient" type="text" name="Ingredient" /><br><br>
+</p>
+
+<input type="submit" name="commit" value="Lets eat" />
+
+
