--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,9 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<h1 class=heading>{{title}}</h1>
+
+<div class = "intro">
+    <p class = "title">Welcome to {{title}}</p>
+    <p class = "title"> Have you ever found yourself stuck for ideas on what to cook at night. Let us help you with some suggested recipes from around the world</p>
+</div>
 
 <form class="ingredient" id="ingredient" action="/" accept-charset="UTF-8" method="post">
 
@@ -7,6 +11,6 @@
     <input placeholder="Ingredient" type="text" name="Ingredient" /><br><br>
 </p>
 
-<input type="submit" name="commit" value="Lets eat" />
+    <input type="submit" name="commit" value="Lets eat" />
 
 
