--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
-<h1 class=heading>{{title}}</h1>
+<h1 class=heading>{{name}}</h1>
 
 <div class = "intro">
-    <p class = "title">Welcome to {{title}}</p>
+    <p class = "title">Welcome to {{name}}</p>
     <p class = "title"> Have you ever found yourself stuck for ideas on what to cook at night. Let us help you with some suggested recipes from around the world</p>
 </div>
 
