--- a/views/results.hbs
+++ b/views/results.hbs
@@ -1,16 +1,13 @@
-<h1 class = heading>{{title}}</h1>
+<h1 class = heading>{{name}}</h1>
 
 <div class="intro">
 <p class = title>Hows that for a suggestion?</p>
-
-
-<p> powered by Food2Fork</p>
-
 </div>
 
 
+<h3>{{title}}</h3>
+<p>{{publisher}}</p>
+<a href="{{source_url}}">
+<img src="{{image_url}}" alt = "yummy"></a>
 
-<h3>{{recipe.name}}</h3>
-<a href={{recipe.url}}<a>
-<img src={{recipe.img}} alt = "yummy">
-<p class ="recipe"> {{recipe.description}}</p>
+<p> powered by Food2Fork</p>
