Search ingredient from home

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,7 @@
 <form class="ingredient" id="ingredient" action="/" accept-charset="UTF-8" method="post">
 
 <p>
-    <input placeholder="Ingredient" type="text" name="Ingredient" /><br><br>
+    <input placeholder="Ingredient" type="text" name="ingredient" /><br><br>
 </p>
 
     <input type="submit" name="commit" value="Lets eat" />
