Find new recipe from results page

--- a/views/results.hbs
+++ b/views/results.hbs
@@ -1,13 +1,11 @@
 <h1 class = heading>{{name}}</h1>
+  <div class="intro">
+    <p class = title>Hows that for a suggestion?</p>
+  </div>
+    <h3>{{title}}</h3><br>
+      <img src="{{image_url}}" alt = "yummy"><br>
+      <p>Recipe from {{publisher}}</p><br>
+      <a href="{{source_url}}">get the recipe</a><br>
+      <input type="button" value="new recipe" onClick="window.location.reload()">
 
-<div class="intro">
-<p class = title>Hows that for a suggestion?</p>
-</div>
-
-
-<h3>{{title}}</h3>
-<p>{{publisher}}</p>
-<a href="{{source_url}}">
-<img src="{{image_url}}" alt = "yummy"></a>
-
-<p> powered by Food2Fork</p>
+      <p> powered by Food2Fork</p>
