changes to CSS styling, add home button

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,16 +1,13 @@
-<h1 class=heading>{{name}}</h1>
+<h1 class='heading'>{{name}}</h1>
 
 <div class = "intro">
     <p class = "title">Welcome to {{name}}</p>
-    <p class = "title"> Have you ever found yourself stuck for ideas on what to cook at night. Let us help you with some suggested recipes from around the world</p>
+    <p class = "title"> Have you ever found yourself stuck for ideas on what to cook at night? Let us help you with some great recipes from around the world</p>
 </div>
-
-<form class="ingredient" id="ingredient" action="/" accept-charset="UTF-8" method="post">
-
-<p>
-    <input placeholder="Ingredient" type="text" name="ingredient" /><br><br>
-</p>
-
-    <input type="submit" name="commit" value="Lets eat" />
+<div>
+	<form class="ingredient" id="ingredients" action="/" accept-charset="UTF-8" method="post">
+    <input placeholder="Ingredients" type="text" name="ingredients" /><br>
+    <input id='search'type="submit" name="commit" value="Lets eat" />
+</div>
 
 
