--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,15 @@
+@import url(https://fonts.googleapis.com/css?family=Lobster);
+@import url(https://fonts.googleapis.com/css?family=Raleway);
+
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: 'Raleway';
   text-align: center;
   margin:auto;
+  width: 100%;
+  height: 100%;
+  background-color: #20FC8F;
+  z-index: -10;
 
 }
 .heading {
@@ -15,7 +22,10 @@ body {
   align-items: center;
   justify-content: center;
   color: white;
-}
+  font-family: 'Lobster', cursive;
+  font-size: 3em
+
+  }
 
 .intro {
   margin-top: 70px;
@@ -27,9 +37,43 @@ body {
   width: 70%;
   text-align: center;
   line-height: 200%;
+}
+p {
+  font-family:'Raleway';
+  font-size: 20px;
+}
 
+img {
+  width: 100%;
 }
 
 a {
   color: #00B7FF;
+}
+
+input {
+  text-align: center;
+}
+
+h3 {
+  font-family: 'Raleway';
+}
+
+#search {
+  margin-top: 15px;
+}
+
+.buttons {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.footer, .from {
+  font-size: 10px;
+}
+
+@media screen and (min-width: 550px) {
+  img {
+    width: 500px;
+  }
 }
