--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
 <div>
 	<form class="ingredient" id="ingredients" action="/" accept-charset="UTF-8" method="post">
     <input placeholder="Ingredients" type="text" name="ingredients" /><br>
-    <input id='search'type="submit" name="commit" value="Lets eat" />
+    <input class='btn btn-primary' id='search'type="submit" name="commit" value="Lets eat" />
 </div>
 
 
