--- a/views/noresult.hbs
+++ b/views/noresult.hbs
@@ -3,4 +3,7 @@
 <div class = "intro">
     <p class = "title"> Sorry but we don't have any recommendations for you. Lets try again with something else.</p>
 </div>
+<div>
+<a href='/'><button class='btn btn-primary'type='button'>Lets try again</button></a>
+</div>
 
