--- a/views/results.hbs
+++ b/views/results.hbs
@@ -3,7 +3,7 @@
   <p class='from'>Recipe from {{publisher}}</p><br>
 	  <a href="{{source_url}}">get the recipe</a><br>
   <div class ='buttons'>
-	  <input type="button" value="new recipe" onClick="window.location.reload()">
-	  <a href='/'><button type='button'>New ingredients</button></a>
+	  <input class='btn btn-primary' type="button" value="new recipe" onClick="window.location.reload()">
+	  <a href='/'><button class='btn btn-primary'type='button'>New ingredients</button></a>
   </div>
   <p class='footer'> powered by Food2Fork</p>
