--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,7 +8,7 @@ body {
   margin:auto;
   width: 100%;
   height: 100%;
-  background-color: #20FC8F;
+  background-color: #B5D4F2;
   z-index: -10;
 
 }
